# smart_plant

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
app/: config.py  db.py  logging_config.py  main.py  tasks.json
app/camera/: camera_service.py
app/moisture_sensor/: moisture_sensor.py
app/pump/: pump_service.py
app/scheduler/: scheduler_service.py
app/storage/: action_logger.py  models.py
app/storage/migrations/: env.py
app/storage/migrations/versions/: 0cc394ef57a4_add_moisture.py  565a3ee5ca4e_init_schema.py
smart_plant/: config.py  db.py  logging.yaml  logging_config.py  main.py  tasks.json
smart_plant/bot/: telegram_bot.py
smart_plant/camera/: camera_service.py
smart_plant/moisture_sensor/: moisture_sensor.py
smart_plant/pump/: pump_service.py
smart_plant/scheduler/: scheduler_service.py
smart_plant/storage/: action_logger.py  models.py
smart_plant/storage/migrations/: env.py
smart_plant/storage/migrations/versions/: 8d8e2b47d82d_add_pump.py
